Time: 2 ms (51.41%), Space: 45.1 MB (19.93%) - LeetHub